[package]
name = "unroll"
version = "0.1.0"
edition = "2021"
authors = ["sarah <>"]
description = "A generic unrollling function."
readme = "README.md"
repository = "https://github.com/kitegi/unroll/"
license = "MIT"
keywords = ["const-generics", "metaprogramming"]

[dependencies]
seq-macro = "0.3.0"
